# unittest2pytest

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.txt  CHANGELOG.rst  CHANGES.rst  DEVELOPER.rst  MANIFEST.in  README.rst  RELEASE_PROCESS.md  RELEASING.rst  check_changelog.py  make_changelog.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml  release.yml  test.yml
scripts/: check_changelog.py  extract_changelog.py  make_changelog.py
tests/: requirements.txt  test_all_fixes.py
tests/fixtures/: simple_out.py
tests/fixtures/remove_class/: assertEqual_in.py  assertEqual_out.py  assert_raise.py  dedent_in.py  dedent_out.py
tests/fixtures/self_assert/: assertAlmostEqual_in.py  assertAlmostEqual_out.py  assertAssertEqual_out.py  assertCountEqual_in.py  assertCountEqual_out.py  assertDictContainsSubset_in.py  assertDictContainsSubset_out.py  assertDictEqual_in.py  assertDictEqual_out.py  assertEqual_in.py  assertEqual_out.py  assertFalse_in.py  assertFalse_out.py  assertGreaterEqual_in.py  assertGreaterEqual_out.py  assertGreater_in.py  assertGreater_out.py  assertIn_in.py  assertIn_out.py  assertIsInstance_in.py  assertIsInstance_out.py  assertIsNone_in.py  assertIsNone_out.py  assertIsNotNone_in.py  assertIsNotNone_out.py  assertIsNot_in.py  assertIsNot_out.py  assertIs_in.py  assertIs_out.py  assertItemsEqual_in.py  assertItemsEqual_out.py  assertLessEqual_in.py  assertLessEqual_out.py  assertLess_in.py  assertLess_out.py  assertListEqual_in.py  assertListEqual_out.py  assertMultiLineEqual_in.py  assertMultiLineEqual_out.py  assertNotAlmostEqual_in.py  (+35 more)
unittest2pytest/: __init__.py  __main__.py  utils.py
unittest2pytest/fixes/: fix_assertEqual.py  fix_remove_class.py  fix_self_assert.py
