[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "unittest2pytest"
authors = [{name = "Hartmut Goebel", email = "h.goebel@crazy-compilers.com"}]
license = "GPL-3.0-or-later"
license-files = ["COPYING-GPLv3.txt", "AUTHORS.txt"]
description = "Convert unittest test-cases to pytest"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dynamic = ["readme", "version"]
requires-python = ">=3.9"
dependencies = ["fissix"]

[project.urls]
Homepage = "https://github.com/pytest-dev/unittest2pytest"

[project.scripts]
unittest2pytest = "unittest2pytest.__main__:main"

[tool.setuptools]
packages = ["unittest2pytest", "unittest2pytest.fixes"]
zip-safe = false
include-package-data = false

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "NEWLINE.rst", "CHANGELOG.rst"], content-type = "text/x-rst"}

[tool.setuptools_scm]
version_file = "unittest2pytest/_version.py"

[tool.zest-releaser]
push-changes = false
tag-format = "v{version}"
tag-message = "unittest2pytest {version}"
tag-signing = true

[tool.ruff]
target-version = "py39"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501", "E701", "E741", "UP031"]

[tool.ruff.lint.per-file-ignores]
"unittest2pytest/fixes/fix_remove_class.py" = ["W291"]
"unittest2pytest/fixes/fix_self_assert.py" = ["F841"]

[tool.tox]
env_list = ["py39", "py310", "py311", "py312", "py313", "py314", "py315"]

[tool.tox.env_run_base]
deps = ["pytest"]
commands = [["pytest", "{posargs}"]]
