[metadata]
name = unittest2pytest
version = attr: unittest2pytest.__version__
author = Hartmut Goebel
author_email = h.goebel@crazy-compilers.com
license = GPLv3+
description = Convert unittest test-cases to pytest
url = https://github.com/pytest-dev/unittest2pytest
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: 3.15
    Topic :: Software Development
    Topic :: Utilities

[options]
packages = unittest2pytest, unittest2pytest.fixes
zip_safe = False
install_requires = fissix
python_requires = >=3.9

[options.entry_points]
console_scripts =
    unittest2pytest = unittest2pytest.__main__:main

[zest.releaser]
python-file-with-version = unittest2pytest/__init__.py
push-changes = no
tag-format = v{version}
tag-message = unittest2pytest {version}
tag-signing = yes
